data/derived/comb/progs/unify/prog7269.ml.out
Characters 76-77:
  let (x,y) = h in if(x = k) then y else assoc(d,k,t);;
              ^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
